Working Version 1.1 Updated